# ProcessTool

./: CMakeLists.txt  QAppList.sln  README.md
QAppList/: QAppList.vcxproj  QAppList.vcxproj.filters  RetrieveHelper.cpp  RetrieveHelper.h  appstyle.qss  custommodel.cpp  custompushbutton.cpp  main.cpp  modulestableview.cpp  modulestableview.h  nofocusframedelegate.h  processview.cpp  processview.h  qapplist.cpp  qapplist.h  qapplist.qrc  qapplist.ui  shadoweffectwidget.cpp  shadoweffectwidget.h  titlebar.cpp
src/: RetrieveHelper.h  applicationview.cpp  applicationview.h  appstyle.qss  custommodel.h  custompushbutton.h  main.cpp  nofocusframedelegate.cpp  processview.cpp  qapplist.h  titlebar.h
